2013-02-28  Ramon Casero  <rcasero@gmail.com>

	* Add matlab/PointsToolbox/thickslice_collate_sax_la.m: (0.1.0)

	- THICKSLICE_COLLATE_SAX_LA Build a distance/adjacency matrix
	collating points from a Long Axis plane to a set of Short Axis
	planes.

	* matlab/PointsToolbox/surface_interpolation.m: (v0.5.1)

	- Accept a tension interpolation parameter for spherical
	splines. Tension works as a regulariser, smoothing the spline.

2013-02-27  Ramon Casero  <rcasero@gmail.com>

	* Add matlab/PointsToolbox/scimat_simlandmarks_thickslice.m: (0.1.0)

	- SCIMAT_SIMLANDMARKS_THICKSLICE Simulate a human placing
	landmarks on the boundary of a "thick slice" segmentation.

	* matlab/PointsToolbox/scinrrd_surface_interpolation.m: (0.7.0)
	* matlab/test/test_scinrrd_surface_interpolation.m: (0.1.1)

	- Change of interface to match the change of interface in
	surface_interpolation().

	* Move data files from matlab/test to matlab/test/data.

	* matlab/test/test_surface_interpolation.m: (v0.2.0)

	- Interface of surface_interpolation() has changed.

	- Add "PCA parameterisation for all interpolation methods on a
	plane".

	- Add "Isomap parameterisation for all interpolation methods on a
	plane".

	- Add "We have a scattered set of points and we want to compute an
	interpolation surface topologically equivalent to a sphere"

	* matlab/PointsToolbox/surface_interpolation.m: (0.5.0)

	- Full change to the interface. Big rewrite of the function.

	- Add parameterisation method 'sphisomap': Our extension to the
	Isomap method so that points are parameterised on a sphere rather
	than on a plane.

	- Add interpolation method 'sphspline': Sphere spline
	interpolation by Wessel et al.

	- All points are passed as (:,3) and (:,2) matrices.

	- Interpolated surface is returned as a (:,:,3) volume, where each
	slice corresponds to the x, y and z-coordinates of each
	interpolated point. Having the surface points on a grid allows to
	then easily plot the surface using surf().
